[package]
name = "rusty_convertalizer"
version = "0.1.0"
authors = ["anzio <anzbert@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", features = [] }
# eframe = { version = "0.20.0", default-features = false, features = [
#     "glow", # Use the glow rendering backend. Alternative: "wgpu".
#     "default_fonts", # Embed the default egui fonts.
# ] }

symphonia = "0.5.2"

# # Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2

[patch.crates-io]
# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
